--- a/temporary.htm
+++ b/temporary.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header class="Page-list">
-            <div class="Logo"><img src="C:/Users/LAPTOP/Desktop/Internet Sotry.png" alt="MMU logo" width="110"></div>
+            <div class="Logo"><img src="Internet Story.png" alt="MMU logo" width="110"></div>
             <div>
                 <li>Homepage</li>
                 <li>History</li>
