--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
                 <li>Meet the crew</li>
             </div>
         </header>
+        <p>
+            THIS IS TEMPORARY WEBSITE TEST FOR CSS.
+        </p>
     </body>
 </html>
