--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <link href="main.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
-        <header class="Page-list">
-            <div class="Logo"><img src="Internet Story.png" alt="MMU logo" width="110"></div>
+        <header>
+            <div class="Logo"><img src="C:/Users/LAPTOP/Desktop/Internet Story.png" alt="MMU logo" width="110"></div>
             <div>
                 <li>Homepage</li>
                 <li>History</li>
@@ -12,10 +12,12 @@
                 <li>ISPs</li>
                 <li>Alternative</li>
                 <li>Meet the crew</li>
-            </div>
-        </header>
-        <p>
-            THIS IS TEMPORARY WEBSITE TEST FOR CSS.
-        </p>
+            </header>
+        </div>
+        <div>
+            <p>
+                THIS IS TEMPORARY WEBSITE TEST FOR CSS.
+            </p>
+        </div>
     </body>
 </html>
