--- a/Home page.html
+++ b/Home page.html
@@ -9,7 +9,7 @@
 <div>
    <h1>The Internet</h1>
    <a href="Home page.html">Home</a>
-   <a href="" target="_blank">Our Group Member</a>
+   <a href="Self Promotion.html" target="_blank">Our Group Member</a>
 </div>
 
 <div>
