--- a/Home page.html
+++ b/Home page.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>HOME</title>
-<link href="main.css" type="text/css" rel="stylesheet">
+<link href="" type="text/css" rel="stylesheet">
 </head>
 
 <body>
