--- a/ISPs.html
+++ b/ISPs.html
@@ -197,6 +197,115 @@
 
             <a href="https://www.broadbandspeedchecker.co.uk/isp-directory/Malaysia.html" target="_blank">Check the test here!</a>
 
+            <h4>The pros and cons</h4>
+            <table>
+                <thead>
+                    <tr>
+                        <th>ISPS</th>
+                        <th>Celcom</th>
+                        <th>DiGi</th>
+                        <th>Maxis</th>
+                        <th>Unifi</th>
+                        <th>U-Mobile</th>
+                        <th>TIME Internet</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Pros</th>
+                        <td>
+                            <ul>
+                            <li>Free 10GB internet data for specific apps (for monthly offer)</li> 
+                            <li>Free 500MB internet data (for monthly offer)</li>
+                            <li>Telco with the best coverage in Malaysia productnation</li>
+                            <li>Stable signal with no buffering</li>
+                            <li>Cover urban areas and 8,00 hotspot nationwide</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Auto-renewal as long as there’s leftover credit productnation</li>
+                                <li>Top-up charges available productnation </li>
+                                <li>No relocation fee needed if account is registered under same name</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Combine plans for mobile and home internet service provider</li>
+                                <li>Free 2 units of Mesh Wifi device upon 500Mbps or above.</li>
+                                <li>Offer e-Sim card to reduce physical SIM</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Available for most homes including landed properties</li>
+                                <li>Free 600-minute calls</li>
+                                <li>Free TV package for 6 months productnation</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Capable of single RAN for 4G LTE-A</li>
+                                <li>Able to transition to %G via software updates</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>High speed internet with no lock in period</li>
+                                <li>Occasional rewards by portal</li>
+                                <li>Provide router and optical network unit with any subscription</li>
+                            </ul>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <th>Cons</th>
+                        <td>
+                            <ul>
+                                <li>Celcom is better if you live in an urban area as compared to a rural populated area.</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li> lack of base stations</li>
+                                <li>Inconsistency of speed </li>
+                                <li>Inefficient customer service.</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>harge you heavy upfront fees of RM 300 deposit and need to activation fee of RM 100</li>
+                                <li>contract period your plan will be automatically altered to non-promotion.</li>
+                                <li>Slow bandwidth speed </li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Bad customer support </li>
+                                <li>need to pay a termination fee RM 500.</li>
+                                <li>Had to pay extra fees for changing plan and location.</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Limited 4G coverage </li>
+                                <li>Not offering home fibre internet</li>
+                                <li>Foreigners must walk-in to purchase any plan with their passport.</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Upon breaking no lock in contract within time, automatically levies RM 400 or 500 surcharges to the account and will not be entitled to any promotions.</li>
+                                <li>limited towards its coverage area with a limited number of installation ports.</li>
+                                <li>more at commercial viability.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <h4>Now we know most of the infomation about the ISPs in Malaysia,you can now make your decision based on your need and condition!!</h4>
+            
         </div>
     </body>
 
