--- a/ISPs.html
+++ b/ISPs.html
@@ -274,7 +274,7 @@
                         </td>
                         <td>
                             <ul>
-                                <li>harge you heavy upfront fees of RM 300 deposit and need to activation fee of RM 100</li>
+                                <li>Charge you heavy upfront fees of RM 300 deposit and need to activation fee of RM 100</li>
                                 <li>contract period your plan will be automatically altered to non-promotion.</li>
                                 <li>Slow bandwidth speed </li>
                             </ul>
@@ -304,7 +304,7 @@
                 </tbody>
             </table>
 
-            <h4>Now we know most of the infomation about the ISPs in Malaysia,you can now make your decision based on your need and condition!!</h4>
+            <h3>Now we know most of the infomation about the ISPs in Malaysia,you can now make your decision based on your need and condition!!</h3>
             
         </div>
     </body>
