--- a/index.html
+++ b/index.html
@@ -1,23 +1,62 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <link href="main.css" type="text/css" rel="stylesheet" />
-    </head>
-    <body>
-        <header>
-            <div class="Logo"><img src="Internet Story.png" alt="MMU logo" width="110"></div>
-            <div>
-                <li>Homepage</li>
-                <li>History</li>
-                <li>System</li>
-                <li>ISPs</li>
-                <li>Alternative</li>
-                <li>Meet the crew</li>
-            </header>
+
+<head>
+    <title>HOME</title>
+    <link href="main.css" type="text/css" rel="stylesheet" />
+</head>
+
+<body>
+<div class="header">
+    <div><a href="Home page.html"><img src="Internet Story.png" alt="MMU logo" width="90"></a></div>
+</div>
+
+<div class="paragraph">
+    <div id="Greeting" style="color: #e4e4e4">
+        <p style="font-size:40px;"><em><b>Hello!</b></em></p>
+        <h2 style="margin-top: -40px; font-size: 18px;">We are the members of group <b style="color: #ee7381; font-size: 20px;">Spiderman.</b></h2>
+        <h3 style="margin-top: -15px; font-size: 18px;">And we will be focusing on the topic about <b style="color: #e4e4e4">THE INTERNET.</b></h3>
+        <a href="Self Promotion.html" target="_blank" class="button">OUR GROUP MEMBERS</a>
+    </div>
+
+    <div class="content">
+    <div id="Introduction">
+        <h2 style="color: #e4e4e4">Introduction</h2>
+        <p>The Internet, is one of the greatest invention on Earth by <b style="color: #e4e4e4">BOB KAHN (1938)</b> and <b style="color: #e4e4e4">VINT CERT (1943)</b>. Eversince the Internet has been created, our life has become very convenient. We can easily stay connected to each other throughout the internet. The Internet has gone through a massive change since the time its created. But what are the phases that it underwent and will it remain?</p>
+        <p><b>In this website,we will show to you our study on the Internet.</p>
+    </div>
+
+    <div id="Steps">
+        <div id="questions" style="list-style-type: none;">
+                <h3 style="color: #e4e4e4; text-align: left; ">The Scope of Our Study:</h3>
+                <div style="float: left;">
+                <li>How did the internet came about?</li>
+                <li><a href="" target="_blank">&emsp;&#x2022;History of Internet</a></li>
+                </div>
+                <div style="float: left;">
+                <li>How does the internet works?</li>
+                <li><a href='' target='_blank'>&emsp;&#x2022;Internet Jobs</a></li>
+                </div>
+                <div style="float: left;">
+                <li>What are the difference between different ISPs?</li>
+                <li><a href='ISPs.html' target='_blank'>&emsp;&#x2022;The ISPs in Malaysia</a></li>
+                </div>
+                <div style="float: left;">
+                <li>Are there better alternative to the internet?</li>
+                <li><a href='' target='_blank'>&emsp;&#x2022;Packet Radios</a></li>
+                </div>
         </div>
-        <div>
-            <p>
-                THIS IS TEMPORARY WEBSITE TEST FOR CSS.
-            </p>
-        </div>
-    </body>
+
+    </div>
+
+    <div class="podcast" style="color: #e4e4e4">
+        <h2>Listen To Our Podcast Here!</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/SyxhuaLWFtw?si=4rkYLoLlG42xQ5SU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </video>
+    </div>
+    </div>
+
+</div>
+</body>
+
 </html>
