--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 <body>
 <div class="header">
-    <div><a href="Home page.html"><img src="Internet Story.png" alt="MMU logo" width="90"></a></div>
+    <div><a href="Home page.html"><img src="C:/Users/LAPTOP/Desktop/Internet Story.png" alt="MMU logo" width="90"></a></div>
 </div>
 
 <div class="paragraph">
     <div id="Greeting" style="color: #e4e4e4">
         <p style="font-size:40px;"><em><b>Hello!</b></em></p>
-        <h2 style="margin-top: -40px; font-size: 18px;">We are the members of group <b style="color: #ee7381; font-size: 20px;">Spiderman.</b></h2>
+        <h2 style="margin-top: -40px; font-size: 18px;">We are the members of group <b style="color: #73c4be; font-size: 20px;">Spiderman.</b></h2>
         <h3 style="margin-top: -15px; font-size: 18px;">And we will be focusing on the topic about <b style="color: #e4e4e4">THE INTERNET.</b></h3>
         <a href="Self Promotion.html" target="_blank" class="button">OUR GROUP MEMBERS</a>
     </div>
@@ -23,7 +23,7 @@
     <div id="Introduction">
         <h2 style="color: #e4e4e4">Introduction</h2>
         <p>The Internet, is one of the greatest invention on Earth by <b style="color: #e4e4e4">BOB KAHN (1938)</b> and <b style="color: #e4e4e4">VINT CERT (1943)</b>. Eversince the Internet has been created, our life has become very convenient. We can easily stay connected to each other throughout the internet. The Internet has gone through a massive change since the time its created. But what are the phases that it underwent and will it remain?</p>
-        <p><b>In this website,we will show to you our study on the Internet.</p>
+        <p style="color: #73c4be; font-size: 18px;"><b>In this website,we will show to you our study on the INTERNET.</p>
     </div>
 
     <div id="Steps">
