--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <div class="header">
-    <div><a href="Home page.html"><img src="C:/Users/LAPTOP/Desktop/Internet Story.png" alt="MMU logo" width="90"></a></div>
+    <div><a href="Home page.html"><img src="Internet Story.png" alt="MMU logo" width="90"></a></div>
 </div>
 
 <div class="paragraph">
