--- a/index.html
+++ b/index.html
@@ -8,52 +8,67 @@
 
 <body>
 <div class="header">
-    <div><a href="Home page.html"><img src="Internet Story.png" alt="MMU logo" width="90"></a></div>
+    <div><a href="Home page.html"><img src="img/Internet Story.png" alt="MMU logo" width="90"></a></div>
+    <nav class="navigation">
+        <a href="Home page.html" style="color: #f5a23e; font-size: large; font-weight: 500;">Home</a>
+        <a href="#">History</a>
+        <a href="#">Network</a>
+        <a href="ISPs.html">ISPs</a>
+        <a href="#">Alternative</a>
+        <a href="Self Promotion.html">Members</a>
+        <span></span>
+    </nav>
 </div>
 
 <div class="paragraph">
     <div id="Greeting" style="color: #e4e4e4">
-        <p style="font-size:40px;"><em><b>Hello!</b></em></p>
+        <p style="font-size:40px;" id="Hello"><em><b>Hello!</b></em></p>
         <h2 style="margin-top: -40px; font-size: 18px;">We are the members of group <b style="color: #73c4be; font-size: 20px;">Spiderman.</b></h2>
         <h3 style="margin-top: -15px; font-size: 18px;">And we will be focusing on the topic about <b style="color: #e4e4e4">THE INTERNET.</b></h3>
-        <a href="Self Promotion.html" target="_blank" class="button">OUR GROUP MEMBERS</a>
+        <a href="Self Promotion.html" class="button">OUR GROUP MEMBERS</a>
     </div>
 
-    <div class="content">
-    <div id="Introduction">
-        <h2 style="color: #e4e4e4">Introduction</h2>
-        <p>The Internet, is one of the greatest invention on Earth by <b style="color: #e4e4e4">BOB KAHN (1938)</b> and <b style="color: #e4e4e4">VINT CERT (1943)</b>. Eversince the Internet has been created, our life has become very convenient. We can easily stay connected to each other throughout the internet. The Internet has gone through a massive change since the time its created. But what are the phases that it underwent and will it remain?</p>
-        <p style="color: #73c4be; font-size: 18px;"><b>In this website,we will show to you our study on the INTERNET.</p>
+    <div class="Intro">
+        <div id="Introduction">
+                <div class="Intro-image">
+                    <img src="img/homepage/Bob-Kahn.png" alt="MMU logo" title="Bob Kahn" id="Bob-Kahn">
+                    <img src="img/homepage/8SR (1).png" alt="MMU logo" title="Vint Cert" id="Vint-Cert">
+                </div>
+                <div class="Intro-paragraph">
+                    <h2 style="color: #e4e4e4; font-size: 1.5em;">Introduction</h2>
+                    <p>The Internet, is one of the greatest invention on Earth by <b style="color: #e4e4e4">BOB KAHN (1938)</b> and <b style="color: #e4e4e4">VINT CERT (1943)</b>. Eversince the Internet has been created, our life has become very convenient. We can easily stay connected to each other throughout the internet. The Internet has gone through a massive change since the time its created. But what are the phases that it underwent and will it remain?</p>
+                    <p style="color: #73c4be; font-size: 18px;"><b>In this website, we will show to you our study on the INTERNET.</p>
+        </div>
     </div>
 
     <div id="Steps">
         <div id="questions" style="list-style-type: none;">
                 <h3 style="color: #e4e4e4; text-align: left; ">The Scope of Our Study:</h3>
                 <div style="float: left;">
-                <li>How did the internet came about?</li>
-                <li><a href="" target="_blank">&emsp;&#x2022;History of Internet</a></li>
+                    <li>How did the internet came about?</li>
+                    <li><a href="" target="_blank">&emsp;&#x2022;History of Internet</a></li>
                 </div>
                 <div style="float: left;">
-                <li>How does the internet works?</li>
-                <li><a href='' target='_blank'>&emsp;&#x2022;Internet Jobs</a></li>
+                    <li>How does the internet works?</li>
+                    <li><a href='' target='_blank'>&emsp;&#x2022;Internet Jobs</a></li>
                 </div>
                 <div style="float: left;">
-                <li>What are the difference between different ISPs?</li>
-                <li><a href='ISPs.html' target='_blank'>&emsp;&#x2022;The ISPs in Malaysia</a></li>
+                    <li>What are the difference between different ISPs?</li>
+                    <li><a href='ISPs.html' target='_blank'>&emsp;&#x2022;The ISPs in Malaysia</a></li>
                 </div>
                 <div style="float: left;">
-                <li>Are there better alternative to the internet?</li>
-                <li><a href='' target='_blank'>&emsp;&#x2022;Packet Radios</a></li>
+                    <li>Are there better alternative to the internet?</li>
+                    <li><a href='' target='_blank'>&emsp;&#x2022;Packet Radios</a></li>
                 </div>
         </div>
 
     </div>
 
-    <div class="podcast" style="color: #e4e4e4">
-        <h2>Listen To Our Podcast Here!</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/SyxhuaLWFtw?si=4rkYLoLlG42xQ5SU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </video>
-    </div>
+        <div class="podcast" style="color: #e4e4e4">
+            <h2>Listen To Our Podcast Here!</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SyxhuaLWFtw?si=4rkYLoLlG42xQ5SU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </video>
+        </div>
     </div>
 
 </div>
