--- a/ISPs.html
+++ b/ISPs.html
@@ -15,9 +15,9 @@
     <body>
 
         <div class="header">
-            <div><a href="Home page.html"><img src="img/Internet Story.png" alt="MMU logo" width="90"></a></div>
+            <div><a href="index.html"><img src="img/Internet Story.png" alt="MMU logo" width="90"></a></div>
             <nav class="navigation">
-                <a href="Home page.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">History</a>
                 <a href="#">Network</a>
                 <a href="ISPs.html" style="color: #f5a23e; font-size: large; font-weight: 500;">ISPs</a>
