--- a/Self Promotion.html
+++ b/Self Promotion.html
@@ -1,101 +1,347 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <body style="background-color:lightcyan;"></body>
 
-    <link rel="stylesheet" type="text/css" href="stilunknown">
+    <head>
+        <title>ISPs</title>
+        <link href="main.css" type="text/css" rel="stylesheet" />
+        <style>
+            table, th, td {
+                border: 2px solid #18273f;
+                border-collapse: collapse;
+              }
+        </style>
+    </head>
 
-<h1 style="font-size:40px;">Self Promotion</h1>
-<b style="font-size:200%;">Group name:</b>
-<p></p>
-<b style="font-size:180%;">🕷️Spiderman🕸️</b1>
+    <body>
 
-<p></p>
+        <div class="header">
+            <div><a href="index.html"><img src="img/Internet Story.png" alt="MMU logo" width="90"></a></div>
+            <nav class="navigation">
+                <a href="index.html">Home</a>
+                <a href="#">History</a>
+                <a href="#">Network</a>
+                <a href="ISPs.html" style="color: #f5a23e; font-size: large; font-weight: 500;">ISPs</a>
+                <a href="#">Alternative</a>
+                <a href="Self Promotion.html">Members</a>
+                <span></span>
+            </nav>
+        </div>
 
-<b style="font-size:175;">Our member:</b>
-<table>
-  <style>
-  table, th, td {
-    border:1px solid black;
-  }</style>
-  
-  <table style="width:95%">
- 
-<tr>
-  <td>NAME:</td>
-  <TD>STUDENT ID:</TD>
-  <td>TOPIC:</td>
-</tr>
+        <div>
+        <div class="content-table">
 
-<tr>
-  <td>AFHAM ABQARY BIN AFRIEZUL</td>
-  <td>1221109240</td>
-  <td>Topic 2 </td>
-  <td></td>
+            <div>
+                <div class="content"> 
+                    <div>
+                        <h1 style="color: #e4e4e4">The ISPs in Malaysia</h1>  
+                    </div>
+                    <p>There are various type of ISPs that exist in Malaysia. ISPs are one of the most important things in our life as it provide us the Internet to use in our daily life. Different ISPs provides us difference plan and features. So,it is important to us to choose the right ISPs that suit our conditions.</p>
+                    <p style="color: #e4e4e4;">But,the question is how do we choose the right ISPs that is suitable for us?</p>
+                    <h5 style="color: #e4e4e4; font-size: larger;">Before we get into the choosing of the ISPs,we must first know WHAT is ISPs?</h5>
+                    <p>ISPs are known as Internet Service Providers. Based on Wikipedia,it is an organisation that provides services for accessing,using,managing or participating in the internet.It typically provides internet services such as internet access,internet transit,domain name registration,web hosting and etc.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Internet_service_provider" target="_blank">Learn More</a>
+                </div>
 
-  <tr>
-    <td>MOHAMMAD ZULHAZIQ BIN MOHAMMAD AMIRUDDIN</td>
-    <td>1221106058  </td>
-    <td>Topic 1 </td>
-  </tr>
+                <div class="content">
+                    <h2>Now,after we know what is an ISPs,do you know how many ISPs that exist in Malaysia?</h2>
 
-<tr>
-  <td>SIM HEYUE</td>
-  <td>1221107138</td>
-  <td>Topic 4</td>
-</tr>
+                    <p>In Malaysia, talking about the most popular ISPs, it must be:</p>
+                    <div>
+                        <div id="ISPs-button"><a href="https://www.celcom.com.my/personal" target="_blank"><img src="img/ISPs/Celcom.jpg" alt="MMU logo" width="90" class="icon-button"></a><span class="caption">Celcom</span></div>
+                        <div id="ISPs-button"><a href="https://www.digi.com.my/" target="_blank"><img src="img/ISPs/digi.jpg" alt="MMU logo" width="90" class="icon-button"></a><span class="caption">Digi</span></div>
+                        <div id="ISPs-button"><a href="https://www.maxis.com.my/en/home/" target="_blank"><img src="img/ISPs/maxis.png" alt="MMU logo" width="90" class="icon-button"></a><span class="caption">Maxis</span></div>
+                        <div id="ISPs-button"><a href="https://unifi.com.my/" target="_blank"><img src="img/ISPs/unifi.jpg" alt="MMU logo" width="90" class="icon-button"></a><span class="caption">Unifi</span></div>
+                        <div id="ISPs-button"><a href="https://www.u.com.my/en/personal/home" target="_blank"><img src="img/ISPs/umobile.png" alt="MMU logo" width="90" class="icon-button"></a><span class="caption">U-mobile</span></div>
+                        <div id="ISPs-button"><a href="https://www.time.com.my/" target="_blank"><img src="img/ISPs/Time.png" alt="MMU logo" width="90" class="icon-button"></a><span class="caption">Time</span></div>
+                    </div>
 
-<tr>
-  <td>SWEENEY CHAW HUI SHI</td>
-  <td>1221108032</td>
-  <td>Topic 3</td>
-</tr>
-  
-</tr>
-</table>
+                    <div>
+                        <p>After knowing all the popular ISPs in Malaysia,what should we do?</p>
+                        <p>In this website, we will be comparing and reviewing this 6 Different ISPs in term of:</p>
+                    </div>
 
-<p></p>
+                    <ul>
+                        <li>The plan</li>
+                        <li>The price</li>
+                        <li>The internet speed</li>
+                        <li>The features</li>
+                        <li>The pros and cons</li>
+                    </ul>
+                </div>
 
-<table>
-  <style>
-    table, th, td {
-      border:1px solid black;
-    }</style>
+                <div class="content">
+                <h3 style="color: #e4e4e4; font-size: x-large;">The Comparision</h3>
+                <h4>Notes:For convenient, we will be comparing the plan they provide in fibre optic plan.</h4>
 
-<table style="width:100%">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>ISPS</th>
+                            <th>Celcom</th>
+                            <th>DiGi</th>
+                            <th>Maxis</th>
+                            <th>Unifi</th>
+                            <th>U-Mobile</th>
+                            <th>TIME Internet</th>
+                        </tr>
+                    </thead>
 
-<tr>
-<td>TOPIC:  </td>
-<td>SCOPE OF STUDY:  </td>
-<td>METHODOLOGY:  </td>
-</tr>
+                    <tbody>
+                        <tr>
+                            <th>Plan</th>
+                            <td>Celcomdigi</td>
+                            <td>Celcomdigi</td>
+                            <td>Maxis Home Fibre</td>
+                            <td>Unifi Fibre</td>
+                            <td>U-Mobile Fibre Broadband</td>
+                            <td>TIME Home Fibre</td>
+                        </tr>
 
-<tr>
-  <td>1.</td>
-  <td>How did the interneet came about?</td>
-  <td>Watch documentarioes and films about the internet.</td>
-</tr>
+                        <tr>
+                            <th>Price(RM)</th>
+                            <td>RM90-RM289</td>
+                            <td>RM75-RM120</td>
+                            <td>RM89-RM299</td>
+                            <td>RM89-RM209</td>
+                            <td>RM129-RM299</td>
+                            <td>RM99-RM379</td>
+                        </tr>
+                    
+                        <tr>
+                            <th>Internet Speeds</th>
+                            <td>100Mbps-1Gbps</td>
+                            <td>50Mbps-300Mbps</td>
+                            <td>30Mbps-800Mbps</td>
+                            <td>30Mbps-500Mbps</td>
+                            <td>100Mbps-1Gbps</td>
+                            <td>100Mbps-2Gbps</td>
+                        </tr>
 
-<tr>
-  <td>2.</td>
-  <td>How does the internet works?</td>
-  <td>Try to set up our own TCP connection betwwen two computer using python.</td>
-</tr>
+                        <tr>
+                            <th>Features</th>
+                            <td>
+                                <ul>
+                                    <li>Get unlimited calls with Postpaid.</li>
+                                    <li>FREE 5G booster on Postpaid.</li>
+                                    <li>FREE WiFi 6 router & fibre installation.</li>
+                                    <li>Savings up to RM50 per month on fibre.</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Get unlimited calls with Postpaid.</li>
+                                    <li>FREE 5G booster on Postpaid.</li>
+                                    <li>FREE WiFi 6 router & fibre installation.</li>
+                                    <li>Savings up to RM50 per month on fibre.</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Home broadband plan-enjoy faster wifi with a wifi 6 router.</li>
+                                    <li>Latest home devices-from big screen TV to tablets.</li>
+                                    <li>Total wifi coverage-strong's wifi signals with EasyMesh and enjoy additional tech support.</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>6 months free speed upgrade.</li>
+                                    <li>30 days free trial.</li>
+                                    <li>Stream with netflix included.</li>
+                                    <li>Largest streaming apps selection</li>
+                                    <li>24 hours service restoration</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Ultra fast speed</li>
+                                    <li>Reliable connection</li>
+                                    <li>Best value</li>
+                                </ul>
+                            </td>
+                            <td>
+                             <ul>
+                                    <li>Affordable-lowest price per Mbps.</li>
+                                    <li>Fast</li>
+                                    <li>Stable</li>
+                                    <li>Helpful- 24/7 here to help.</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                </div>
+                
+                <div class="content">
+                    <h4 style="color: #e4e4e4; font-size: x-large;">The comparision in speed test.</h4>
+                    <p>For the speed test,will be testing the download speed of each ISPs.</p>
 
-<tr>
-  <td>3.</td>
-  <td>Which ISPs is better and what are the difference betwwen them?</td>
-  <td>Review and compare between different ISPs in our location.</td>
-</tr>
+                    <table class="table" style="padding: 0px 1em;">
+                        <thead>
+                            <tr>
+                                <th>ISPS</th>
+                                <th>Celcom</th>
+                                <th>DiGi</th>
+                                <th>Maxis</th>
+                                <th>Unifi</th>
+                                <th>U-Mobile</th>
+                                <th>TIME Internet</th>
+                            </tr>
+                        </thead>
 
-<tr>
-  <td>4.</td>
-  <td>Are there better alternative to the internet?</td>
-  <td>Explore and compare the possibilities of packet radio with the internet and predict its future.</td>
-</tr>
+                        <tbody>
+                            <tr>
+                                <th>Download speed/Mbps</th>
+                                <td>21.29</td>
+                                <td>46.95</td>
+                                <td>76.04</td>
+                                <td>118.59</td>
+                                <td>42.72</td>
+                                <td>156.39</td>
+                            </tr>
 
+                            <tr>
+                                <th>Number of test</th>
+                                <td>993</td>
+                                <td>577</td>
+                                <td>1627</td>
+                                <td>2791</td>
+                                <td>529</td>
+                                <td>758</td>
+                            </tr>
 
-</table>
+                            <tr>
+                                <th>Rank</th>
+                                <td>6</td>
+                                <td>4</td>
+                                <td>3</td>
+                                <td>2</td>
+                                <td>5</td>
+                                <td>1</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p></p>
+                    <a href="https://www.broadbandspeedchecker.co.uk/isp-directory/Malaysia.html" target="_blank">Check the test here!</a>
+                </div>
 
-</body>
+                <div class="content-end">
+                <h4 style="color: #e4e4e4; font-size: x-large;">The pros and cons</h4>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>ISPS</th>
+                            <th>Celcom</th>
+                            <th>DiGi</th>
+                            <th>Maxis</th>
+                            <th>Unifi</th>
+                            <th>U-Mobile</th>
+                            <th>TIME Internet</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Pros</th>
+                            <td>
+                                <ul>
+                                <li>Free 10GB internet data for specific apps (for monthly offer)</li> 
+                                <li>Free 500MB internet data (for monthly offer)</li>
+                                <li>Telco with the best coverage in Malaysia productnation</li>
+                                <li>Stable signal with no buffering</li>
+                                <li>Cover urban areas and 8,00 hotspot nationwide</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Auto-renewal as long as there’s leftover credit productnation</li>
+                                    <li>Top-up charges available productnation </li>
+                                    <li>No relocation fee needed if account is registered under same name</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Combine plans for mobile and home internet service provider</li>
+                                    <li>Free 2 units of Mesh Wifi device upon 500Mbps or above.</li>
+                                    <li>Offer e-Sim card to reduce physical SIM</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Available for most homes including landed properties</li>
+                                    <li>Free 600-minute calls</li>
+                                    <li>Free TV package for 6 months productnation</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Capable of single RAN for 4G LTE-A</li>
+                                    <li>Able to transition to %G via software updates</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>High speed internet with no lock in period</li>
+                                    <li>Occasional rewards by portal</li>
+                                    <li>Provide router and optical network unit with any subscription</li>
+                                </ul>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <th>Cons</th>
+                            <td>
+                                <ul>
+                                    <li>Celcom is better if you live in an urban area as compared to a rural populated area.</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li> lack of base stations</li>
+                                    <li>Inconsistency of speed </li>
+                                    <li>Inefficient customer service.</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Charge you heavy upfront fees of RM 300 deposit and need to activation fee of RM 100</li>
+                                    <li>contract period your plan will be automatically altered to non-promotion.</li>
+                                    <li>Slow bandwidth speed </li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Bad customer support </li>
+                                    <li>need to pay a termination fee RM 500.</li>
+                                    <li>Had to pay extra fees for changing plan and location.</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Limited 4G coverage </li>
+                                    <li>Not offering home fibre internet</li>
+                                    <li>Foreigners must walk-in to purchase any plan with their passport.</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Upon breaking no lock in contract within time, automatically levies RM 400 or 500 surcharges to the account and will not be entitled to any promotions.</li>
+                                    <li>limited towards its coverage area with a limited number of installation ports.</li>
+                                    <li>more at commercial viability.</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h3>Now we know most of the infomation about the ISPs in Malaysia, you can now make your decision based on your need and condition!</h3>
+                <h3>Choose the best one that fits you!</h3>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+    </body>
+
 </html>
