--- a/ISPs.html
+++ b/ISPs.html
@@ -28,23 +28,23 @@
         </div>
 
         <div>
-        <div class="content-table">
+        <div class="content-table" id="ISPs-content">
 
             <div>
                 <div class="content"> 
                     <div>
                         <h1 style="color: #e4e4e4">The ISPs in Malaysia</h1>  
                     </div>
-                    <p>There are various type of ISPs that exist in Malaysia. ISPs are one of the most important things in our life as it provide us the Internet to use in our daily life. Different ISPs provides us difference plan and features. So,it is important to us to choose the right ISPs that suit our conditions.</p>
-                    <h4 style="color: #e4e4e4; font-size: x-large;">But,the question is how do we choose the right ISPs that is suitable for us?</h4>
-                    <h5 style="color: #e4e4e4; font-size: larger;">Before we get into the choosing of the ISPs,we must first know WHAT is ISPs?</h5>
-                    <p>ISPs are known as Internet Service Providers. Based on Wikipedia,it is an organisation that provides services for accessing,using,managing or participating in the internet.It typically provides internet services such as internet access,internet transit,domain name registration,web hosting and etc.
+                    <p>There are various type of ISPs that exist in Malaysia. ISPs are one of the most important things in our life as it provide us the Internet to use in our daily life. Different ISPs provides us different plans and features. So, it is important to us to choose the right ISPs that suit our conditions.</p>
+                    <p style="color: #e4e4e4;">But, the question is how do we choose the right ISPs that is suitable for us?</p>
+                    <h5 style="color: #e4e4e4; font-size: larger;">Before we get into the choosing of the ISPs, we must first know WHAT are ISPs?</h5>
+                    <p>ISPs are known as Internet Service Providers. Based on Wikipedia, it is an organisation that provides services for accessing, using, managing or participating in the internet. It typically provides internet services such as internet access, internet transit, domain name registration, web hosting and etc.
                     </p>
                     <a href="https://en.wikipedia.org/wiki/Internet_service_provider" target="_blank">Learn More</a>
                 </div>
 
                 <div class="content">
-                    <h2>Now,after we know what is an ISPs,do you know how many ISPs that exist in Malaysia?</h2>
+                    <h2>Now, after we know what are ISPs, do you know how many ISPs there are that exist in Malaysia?</h2>
 
                     <p>In Malaysia, talking about the most popular ISPs, it must be:</p>
                     <div>
@@ -57,7 +57,7 @@
                     </div>
 
                     <div>
-                        <p>After knowing all the popular ISPs in Malaysia,what should we do?</p>
+                        <p>After knowing all the popular ISPs in Malaysia, what should we do?</p>
                         <p>In this website, we will be comparing and reviewing this 6 Different ISPs in term of:</p>
                     </div>
 
@@ -71,8 +71,8 @@
                 </div>
 
                 <div class="content">
-                <h3 style="color: #e4e4e4; font-size: x-large;">The Comparision</h3>
-                <h4>Notes:For convenient, we will be comparing the plan they provide in fibre optic plan.</h4>
+                <h3 style="color: #e4e4e4; font-size: x-large;">The Comparison</h3>
+                <h4>Notes: For convenient, we will be comparing the plan they provide in fibre optic plan.</h4>
 
                 <table class="table">
                     <thead>
@@ -173,8 +173,8 @@
                 </div>
                 
                 <div class="content">
-                    <h4 style="color: #e4e4e4; font-size: x-large;">The comparision in speed test.</h4>
-                    <p>For the speed test,will be testing the download speed of each ISPs.</p>
+                    <h4 style="color: #e4e4e4; font-size: x-large;">The comparison in speed test.</h4>
+                    <p>For the speed test, we will be testing the download speed of each ISPs.</p>
 
                     <table class="table" style="padding: 0px 1em;">
                         <thead>
@@ -297,7 +297,7 @@
                             </td>
                             <td>
                                 <ul>
-                                    <li> lack of base stations</li>
+                                    <li>Lack of base stations</li>
                                     <li>Inconsistency of speed </li>
                                     <li>Inefficient customer service.</li>
                                 </ul>
@@ -327,7 +327,7 @@
                                 <ul>
                                     <li>Upon breaking no lock in contract within time, automatically levies RM 400 or 500 surcharges to the account and will not be entitled to any promotions.</li>
                                     <li>limited towards its coverage area with a limited number of installation ports.</li>
-                                    <li>more at commercial viability.</li>
+                                    <li>More at commercial viability.</li>
                                 </ul>
                             </td>
                         </tr>
