--- a/ISPs.html
+++ b/ISPs.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="content">
-                    <h2>Now, after we know what are ISPs, do you know how many ISPs there are that exist in Malaysia?</h2>
+                    <h2>How many ISPs are there that exist in Malaysia?</h2>
 
                     <p>In Malaysia, talking about the most popular ISPs, it must be:</p>
                     <div>
@@ -61,7 +61,7 @@
                         <p>In this website, we will be comparing and reviewing this 6 Different ISPs in term of:</p>
                     </div>
 
-                    <ul>
+                    <ul class="list">
                         <li>The plan</li>
                         <li>The price</li>
                         <li>The internet speed</li>
@@ -173,7 +173,7 @@
                 </div>
                 
                 <div class="content">
-                    <h4 style="color: #e4e4e4; font-size: x-large;">The comparison in speed test.</h4>
+                    <h4 style="color: #e4e4e4; font-size: x-large;">The Comparison in Speed Test</h4>
                     <p>For the speed test, we will be testing the download speed of each ISPs.</p>
 
                     <table class="table" style="padding: 0px 1em;">
@@ -226,7 +226,7 @@
                 </div>
 
                 <div class="content-end">
-                <h4 style="color: #e4e4e4; font-size: x-large;">The pros and cons</h4>
+                <h4 style="color: #e4e4e4; font-size: x-large;">The Pros and Cons</h4>
 
                 <table class="table">
                     <thead>
