--- a/Self Promotion.html
+++ b/Self Promotion.html
@@ -34,25 +34,25 @@
         <p style="color: #73c4be; text-align: center;">AFHAM ABQARY BIN AFRIEZUL</p>
         <p>1221109240</p>
         <p>CSS/HTML</p>
-        <p style="font-size: 14px; text-align: center;">Try to set up a TCP connection using python to understand the internet more deeply</p>
+        <p style="font-size: 14px;" id="roles">Try to set up a TCP connection using python to understand the internet more deeply</p>
       </div>
       <div class="content" id="bio">
-        <p style="color: #73c4be; text-align: center;">SIM HEYUE</p>
+        <p style="color: #73c4be; text-align: center; height: 2.9em;">SIM HEYUE</p>
         <p>1221107138</p>
         <p>HTML</p>
-        <p style="font-size: 14px;">Explore and compare the possibilities of packet radio with the internet and predict its future</p>
+        <p style="font-size: 14px;" id="roles">Explore and compare the possibilities of packet radio with the internet and predict its future</p>
       </div>
       <div class="content" id="bio">
-        <p style="color: #73c4be; text-align: center;">SWEENEY CHAW HUI SHI</p>
+        <p style="color: #73c4be; text-align: center; height: 4.1em;">SWEENEY CHAW HUI SHI</p>
         <p>1221108032</p>
         <p>HTML</p>
-        <p style="font-size: 14px;">Review and compare between different ISPs in our location.</p>
+        <p style="font-size: 14px;" id="roles">Review and compare between different ISPs in our location.</p>
       </div>
       <div class="content" id="bio">
-        <p style="color: #73c4be; text-align: center;">MOHAMMAD ZULHAZIQ BIN MOHAMMAD AMIRUDDIN</p>
+        <p style="color: #73c4be; text-align: center; height: 4.1em;">MOHAMMAD ZULHAZIQ BIN MOHAMMAD AMIRUDDIN</p>
         <p>1221106058</p>
-        <p>CSS/HTML</p>
-        <p style="font-size: 14px;">Explore medias to learn about the history of the internet</p>
+        <p>HTML</p>
+        <p style="font-size: 14px;" id="roles">Explore medias to learn about the history of the internet</p>
       </div>
       <span></span>
     </div>
