--- a/ISPs.html
+++ b/ISPs.html
@@ -90,8 +90,7 @@
                     <tbody>
                         <tr>
                             <th>Plan</th>
-                            <td>Celcomdigi</td>
-                            <td>Celcomdigi</td>
+                            <td rowspan="1" colspan="2">Celcomdigi</td>
                             <td>Maxis Home Fibre</td>
                             <td>Unifi Fibre</td>
                             <td>U-Mobile Fibre Broadband</td>
@@ -120,22 +119,14 @@
 
                         <tr>
                             <th>Features</th>
-                            <td>
+                             <td rowspan="1" colspan="2">
                                 <ul>
                                     <li>Get unlimited calls with Postpaid.</li>
                                     <li>FREE 5G booster on Postpaid.</li>
                                     <li>FREE WiFi 6 router & fibre installation.</li>
                                     <li>Savings up to RM50 per month on fibre.</li>
                                 </ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    <li>Get unlimited calls with Postpaid.</li>
-                                    <li>FREE 5G booster on Postpaid.</li>
-                                    <li>FREE WiFi 6 router & fibre installation.</li>
-                                    <li>Savings up to RM50 per month on fibre.</li>
-                                </ul>
-                            </td>
+                             </td>
                             <td>
                                 <ul>
                                     <li>Home broadband plan-enjoy faster wifi with a wifi 6 router.</li>
