--- a/Self Promotion.html
+++ b/Self Promotion.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Members Page</title>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
-<body style="background: url('C:/Users/LAPTOP/Desktop/HTML_Code-removebg-preview'); background-size: cover; background-color:#0C1821;">
+<body style="background-image: url('img/homepage/blurry-gradient-haikei.svg'); background-size: cover; ">
 
   <div class="header">
-    <div><a href="index.html"><img src="img/Internet Story.png" alt="MMU logo" width="90"></a></div>
-    <nav class="navigation">
-      <a href="index.html">Home</a>
-      <a href="#">History</a>
-      <a href="#">Network</a>
-      <a href="ISPs.html">ISPs</a>
-      <a href="#">Alternative</a>
-      <a href="Self Promotion.html" style="color: #f5a23e; font-size: large; font-weight: 500;">Members</a>
-      <span></span>
-    </nav>
+    <div><a href="index.html"><img src="img/Internet Story.png" alt="Internet Story" width="90"></a></div>
+    <ul class="navigation">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Welcome to the Internet.html">History</a></li>
+      <li><a href="InternetJob.html">Network</a></li>
+      <li><a href="ISPs.html">ISPs</a></li>
+      <li><a href="Packet Radio.html">Alternative</a></li>
+      <li><a href="Self Promotion.html" style="color: #f5a23e; font-size: large; font-weight: 500;">Members</a></li>
+    </ul>
   </div>
 
   <div style="margin: 8em auto; width: 80%;">
@@ -29,32 +29,44 @@
       </div>
     </div>
 
-    <div id="bio-section">
+    <div id="bio-section" style="width: 100%;">
+
       <div class="content" id="bio">
-        <p style="color: #73c4be; text-align: center;">AFHAM ABQARY BIN AFRIEZUL</p>
+        <div class="Intro-image">
+          <img src="portrait/Afham B&W.png" alt="MMU logo" id="profile-pic">
+        </div>
         <p>1221109240</p>
         <p>CSS/HTML</p>
-        <p style="font-size: 14px;" id="roles">Try to set up a TCP connection using python to understand the internet more deeply</p>
+        <p id="roles">Try to set up a TCP connection using python to understand the internet more deeply</p>
       </div>
+
       <div class="content" id="bio">
-        <p style="color: #73c4be; text-align: center; height: 2.9em;">SIM HEYUE</p>
+        <div class="Intro-image">
+          <img src="portrait/Sim B&W.png" alt="MMU logo" id="profile-pic">
+        </div>
         <p>1221107138</p>
         <p>HTML</p>
-        <p style="font-size: 14px;" id="roles">Explore and compare the possibilities of packet radio with the internet and predict its future</p>
+        <p id="roles">Explore and compare the possibilities of packet radio with the internet and predict its future</p>
       </div>
+
       <div class="content" id="bio">
-        <p style="color: #73c4be; text-align: center; height: 4.1em;">SWEENEY CHAW HUI SHI</p>
+        <div class="Intro-image">
+          <img src="portrait/Sweeney B&W.png" alt="MMU logo" id="profile-pic">
+        </div>
         <p>1221108032</p>
         <p>HTML</p>
-        <p style="font-size: 14px;" id="roles">Review and compare between different ISPs in our location.</p>
+        <p id="roles">Review and compare between the difference in ISPs in our location.</p>
       </div>
+
       <div class="content" id="bio">
-        <p style="color: #73c4be; text-align: center; height: 4.1em;">MOHAMMAD ZULHAZIQ BIN MOHAMMAD AMIRUDDIN</p>
+        <div class="Intro-image">
+          <img src="portrait/Zul B&W.png" alt="MMU logo" id="profile-pic">
+        </div>
         <p>1221106058</p>
         <p>HTML</p>
-        <p style="font-size: 14px;" id="roles">Explore medias to learn about the history of the internet</p>
+        <p id="roles">Explore different informative medias on the web to learn about the history of the internet</p>
       </div>
-      <span></span>
+
     </div>
 
   </div>
