--- a/index.html
+++ b/index.html
@@ -7,64 +7,71 @@
 </head>
 
 <body>
-<div class="header">
-    <div><a href="Home page.html"><img src="img/Internet Story.png" alt="MMU logo" width="90"></a></div>
-    <nav class="navigation">
-        <a href="Home page.html" style="color: #f5a23e; font-size: large; font-weight: 500;">Home</a>
-        <a href="#">History</a>
-        <a href="#">Network</a>
-        <a href="ISPs.html">ISPs</a>
-        <a href="#">Alternative</a>
-        <a href="Self Promotion.html">Members</a>
-        <span></span>
+
+    <nav class="header">
+        <div><a href="index.html"><img src="img/Internet Story.png" alt="Internet Story" width="90"></a></div>
+        <ul class="navigation">
+          <li><a href="index.html" style="color: #f5a23e; font-size: large; font-weight: 500;">Home</a></li>
+          <li><a href="Welcome to the Internet.html">History</a></li>
+          <li><a href="InternetJob.html">Network</a></li>
+          <li><a href="ISPs.html">ISPs</a></li>
+          <li><a href="Packet Radio.html">Alternative</a></li>
+          <li><a href="Self Promotion.html">Members</a></li>
+        </ul>
     </nav>
-</div>
 
 <div class="paragraph">
-    <div id="Greeting" style="color: #e4e4e4">
-        <p style="font-size:40px;" id="Hello"><em><b>Hello!</b></em></p>
+    <div id="Greeting">
+        <h1 id="Internet">THE INTERNET</h1>
+        <p id="Hello"><em><b>Hello!</b></em></p>
         <h2 style="margin-top: -40px; font-size: 18px;">We are the members of group <b style="color: #73c4be; font-size: 20px;">Spiderman.</b></h2>
-        <h3 style="margin-top: -15px; font-size: 18px;">And we will be focusing on the topic about <b style="color: #e4e4e4">THE INTERNET.</b></h3>
-        <a href="Self Promotion.html" class="button">OUR GROUP MEMBERS</a>
+        <h3 style="margin-top: -15px; font-size: 18px;">And we will be focusing on the topic about <b>THE INTERNET.</b></h3>
+        <a href="Self Promotion.html" class="text-button">OUR GROUP MEMBERS</a>
     </div>
 
     <div class="Intro">
         <div id="Introduction">
-                <div class="Intro-image">
-                    <img src="img/homepage/Bob-Kahn.png" alt="MMU logo" title="Bob Kahn" id="Bob-Kahn">
-                    <img src="img/homepage/8SR (1).png" alt="MMU logo" title="Vint Cert" id="Vint-Cert">
+                <div id="Intro-image">
+                    <div><img src="img/homepage/Bob-Kahn.png" alt="MMU logo" title="Bob Kahn"></div>
+                    <div><img src="img/homepage/8SR (1).png" alt="MMU logo" title="Vint Cert"></div>
                 </div>
-                <div class="Intro-paragraph">
-                    <h2 style="color: #e4e4e4; font-size: 1.5em;">Introduction</h2>
+                <div id="Intro-paragraph">
+                    <h2 style=" font-size: 1.5em;">Introduction</h2>
                     <p>The Internet, is one of the greatest invention on Earth by <b style="color: #e4e4e4">BOB KAHN (1938)</b> and <b style="color: #e4e4e4">VINT CERT (1943)</b>. Eversince the Internet has been created, our life has become very convenient. We can easily stay connected to each other throughout the internet. The Internet has gone through a massive change since the time its created. But what are the phases that it underwent and will it remain?</p>
                     <p style="color: #73c4be; font-size: 18px;"><b>In this website, we will show to you our study on the INTERNET.</p>
         </div>
     </div>
 
     <div id="Steps">
-        <div id="questions" style="list-style-type: none;">
-                <h3 style="color: #e4e4e4; text-align: left; ">The Scope of Our Study:</h3>
-                <div style="float: left;">
-                    <li>How did the internet came about?</li>
-                    <li><a href="" target="_blank">&emsp;&#x2022;History of Internet</a></li>
-                </div>
-                <div style="float: left;">
-                    <li>How does the internet works?</li>
-                    <li><a href='' target='_blank'>&emsp;&#x2022;Internet Jobs</a></li>
-                </div>
-                <div style="float: left;">
-                    <li>What are the difference between different ISPs?</li>
-                    <li><a href='ISPs.html' target='_blank'>&emsp;&#x2022;The ISPs in Malaysia</a></li>
-                </div>
-                <div style="float: left;">
-                    <li>Are there better alternative to the internet?</li>
-                    <li><a href='' target='_blank'>&emsp;&#x2022;Packet Radios</a></li>
-                </div>
+        <div id="questions">
+                <h3>The Scope of Our Study:</h3>
+                <ul>
+                    <li id="Study-list">How did the internet came about?
+                        <ol>
+                        <li><a href="Welcome to the Internet.html">History of Internet</a></li>
+                        </ol>
+                    </li>
+                    <li id="Study-list">How does the internet works?
+                        <ol>
+                        <li><a href='InternetJob.html'>Internet Jobs</a></li>
+                        </ol>
+                    </li>
+                    <li  id="Study-list">What are the difference between different ISPs?
+                        <ol>
+                        <li><a href='ISPs.html'>The ISPs in Malaysia</a></li>
+                        </ol>
+                    </li>
+                    <li  id="Study-list">Are there better alternative to the internet?
+                        <ol>
+                        <li><a href='Packet Radio.html'>Packet Radios</a></li>
+                        </ol>
+                    </li>
+                </ul>
         </div>
 
     </div>
 
-        <div class="podcast" style="color: #e4e4e4">
+        <div class="podcast">
             <h2>Listen To Our Podcast Here!</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/SyxhuaLWFtw?si=4rkYLoLlG42xQ5SU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </video>
