--- a/ISPs.html
+++ b/ISPs.html
@@ -30,7 +30,7 @@
 
                 <section class="content"> 
                     <div>
-                        <h1>The ISPs in Malaysia</h1>  
+                        <h1 style="font-size:40px;">The ISPs in Malaysia</h1>  
                     </div>
                     <p>There are various type of ISPs that exist in Malaysia. ISPs are one of the most important things in our life as it provide us the Internet to use in our daily life. Different ISPs provides us different plans and features. So, it is important to us to choose the right ISPs that suit our conditions.</p>
                     <p style="color: #e4e4e4;">But, the question is how do we choose the right ISPs that is suitable for us?</p>
