--- a/InternetJob.html
+++ b/InternetJob.html
@@ -35,7 +35,7 @@
         <main class="content-table">
 
         <section class="content">   
-            <h1>Internet Network</h1>
+            <h1 style="font-size:40px;">Internet Network</h1>
 
             <p>When we looked into the word “Internet”, the word actually carries the meaning of “between networks”. There is no centre of the internet, as the internet is a network between different big servers all around the globe connected by either cables, routers, switches and modem.</p>
 
