--- a/Self Promotion.html
+++ b/Self Promotion.html
@@ -22,7 +22,7 @@
   <div style="margin: 8em auto; width: 80%;">
     
     <div class="" style="margin-top: -3em; text-align: center;">
-      <h1>🕷️Spiderman🕸️</h1>
+      <h1 style="font-size:40px;">🕷️Spiderman🕸️</h1>
 
       <div>
         <p>Welcome to our Member Introduction page! We're a group of MMU University students who studied the history of the internet. Meet our team, learn about our roles, and discover what we learned. Join us as we explore the impact of the internet in simple terms.</p>
