--- a/Welcome to the Internet.html
+++ b/Welcome to the Internet.html
@@ -21,7 +21,7 @@
     
     <main class="content-table">
         <section class="content">
-            <h1>HISTORY OF THE INTERNET</h1>
+            <h1 style="font-size:40px;">History of The Internet</h1>
             <h2>Introduction</h2>
             <p>The Internet, has defined by Wikipedia, is the global system of interconnected computer networks that uses the Internet protocol suite <a href="InternetJob.html">(TCP/IP)</a> to communicate between networks and devices. It is a network of networks that consists of private, public, academic, business, and government networks of local to global scope, linked by a broad array of electronic, wireless, and optical networking technologies. 
             <p>The Internet carries a vast range of information resources and services, such as the interlinked hypertext documents and applications of the World Wide Web (WWW), electronic mail, telephony, and file sharing.
