--- a/Self Promotion.html
+++ b/Self Promotion.html
@@ -55,7 +55,7 @@
         </div>
         <p>1221108032</p>
         <p>HTML</p>
-        <p id="roles">Review and compare between the difference in local ISPs in our location to find their pros and cons.</p>
+        <p id="roles">Review and compare between the difference in local ISPs in our location.</p>
       </div>
 
       <div class="content" id="bio">
